# UAV-ROS-simulation

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_simple/: .catkin  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/draw_trajectory/: .catkin  .rosinstall
devel/.private/glog_catkin/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mav_comm/: .catkin  .rosinstall  setup.sh
devel/.private/mav_msgs/: .catkin  setup.sh
devel/.private/mav_planning_msgs/: .catkin  (+3 more)
logs/draw_trajectory/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/rotors_gazebo_plugins/: build.cmake.001.log.stderr
logs/serial_port/: build.check.000.log.stderr  build.cmake.001.log.stderr  build.cmake.003.log.stderr
logs/show_path/: build.make.002.log.stderr
logs/showpath/: build.make.003.log.stderr
logs/topic/: build.make.000.log.stderr
src/: .rosinstall
src/reed_simulator/: readme.md
src/reed_simulator/reed_control/: CMakeLists.txt
src/reed_simulator/reed_control/include/reed_control/: common.h  parameters.h  parameters_ros.h  quat_position_controller.h
src/reed_simulator/reed_control/src/nodes/: quat_position_controller_node.cpp  quat_position_controller_node.h
src/serial_port/: CMakeLists.txt  README.md  data2hex.py  package.xml  xk_history.xlsx
src/show_trajectory/: CMakeLists.txt
src/topic/: CMakeLists.txt
(+480 files in other folders)
